--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "homepage": "https://github.com/abderrahmaneMustapha/RecipeProg#readme",
   "dependencies": {
+    "bootstrap": "^4.5.0",
     "express": "^4.17.1",
     "express-handlebars": "^4.0.4",
     "moment": "^2.27.0",
