--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bootstrap": "^4.5.0",
     "express": "^4.17.1",
     "express-handlebars": "^4.0.4",
+    "express-validator": "^6.6.0",
     "moment": "^2.27.0",
     "mongoose": "^5.9.19"
   },
